syntax = "proto3";
package freelance.v1;
option go_package = "./freelancepb";

service FreelanceService {
  rpc SellerProfile(SellerProfileRequest) returns (SellerProfileResponse);
  rpc GigList(GigListRequest) returns (GigListResponse);
  rpc GigCount(GigCountRequest) returns (GigCountResponse);
  rpc GigListUser(GigListUserRequest) returns (GigListUserResponse);
  rpc GigData(GigDataRequest) returns (GigDataResponse);

  rpc EscrowAllList(EscrowAllListRequest) returns (EscrowAllListResponse);
  rpc EscrowSenderList(EscrowSenderListRequest) returns (EscrowSenderListResponse);
  rpc EscrowReceiverList(EscrowReceiverListRequest) returns (EscrowReceiverListResponse);
}

message GigCountRequest {
  string category = 1;
  string subcategory = 2;
}
message GigCountResponse {
  int32 count = 1;
}

message SellerProfileRequest {
  string seller_address = 1;
}

message SellerProfileResponse {
  string seller_address = 1;
  string ipfs = 2;
  bool is_active = 3;
}

message GigListRequest {
  string category = 1;
  string subcategory=2;
  int32 limit = 3;
  int32 offset = 4;
}

message  GigListUserRequest {
  string address = 1;
}

message EscrowAllListRequest{
  string address = 1;
}
message EscrowSenderListRequest{
  string address = 1;
}
message EscrowReceiverListRequest{
  string address = 1;
}
message EscrowInfo {
  uint32 id = 1;
  string sender = 2;
  string receiver = 3;
  string amount = 4;
  string amount_denom = 5;
  uint64 expire_at = 6;
  uint32 status = 7;
}

message EscrowAllListResponse{
  repeated EscrowInfo escrows = 1;
}
message EscrowSenderListResponse{
  repeated EscrowInfo escrows = 1;
}
message EscrowReceiverListResponse{
  repeated EscrowInfo escrows = 1;
}

message GigInfo {
  string identifier = 1;
  string created_by = 2;
  string metadata = 3;
  int64 created_at = 4;
}
message GigListResponse {
  repeated GigInfo gigs = 1;
}
message GigListUserResponse {
  repeated GigInfo gigs = 1;
}
message GigDataRequest {
  string identifier = 1;
}
message GigDataResponse{
  GigInfo gig = 1;
}
